--- a/ilkDeneme.ipynb
+++ b/ilkDeneme.ipynb
@@ -80,6 +80,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c7aa141",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# BUYUK VERISET HAZIRLAMA\n",
+    "Asagida gercek verisetini yukleyip birlestirelim\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc721d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Mevcut insan verilerini yukle\n",
+    "df_human_old = pd.read_csv('.csv')\n",
+    "print(f\"Mevcut insan verisi: {len(df_human_old)} metin\")\n",
+    "df_human_old.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48e37618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b3f3f8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e75f4ccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0006dd05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "ddb28db7",
